# platform_client_library_python

./: .gitignore  .gitmodules  .readthedocs.yaml  BUILD  Dockerfile  LICENSE.txt  README.md  README.rst  circle.yml  demo.py  doc_requirements.txt  pep8.cfg  pycodestyle.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tests.py  tox.ini
.circleci/: config.yml
docs/source/: conf.py  copywrite.rst  index.rst  requirements.txt
docs/source/circuits/: circuits.rst
docs/source/get-started/: quickstart.rst
docs/source/optimization/: HIsing.rst  HOBO.rst  HOIO.rst  Ising.rst  PUBO.rst  QUBO.rst  brute_force.rst  optimize_binary.rst  sat.rst  solve_binary.rst  utilities.rst  warnings.rst
docs/source/physics/: mcvqe.rst  vqe.rst
docs/source/qio/: qio.rst
docs/source/qml/: classification.rst  fit_and_predict.rst
docs/source/qutils/: qutils.rst
docs/source/reference/: circuits.rst  config.rst  demos.rst  montecarlo.rst  optimization.rst  qutils.rst
qcware/: BUILD  __init__.py  async_request.py  client_init.py  exceptions.py  optimization.py  param_utils.py  params_pb2.py  physics.py  qml.py  request.py  version.py  wrappers.py
qcware/api_calls/: __init__.py  api_call.py  declare_api_call.py
qcware/circuits/: __init__.py  has_run_statevector.py  has_statevector_input.py  quasar_backend.py  run_backend_method.py  run_measurement.py  run_statevector.py
qcware/circuits/api/: __init__.py  (+1 more)
qcware/config/: BUILD  __init__.py  api_semver.py  config.py
qcware/forge/: __init__.py  async_request.py  exceptions.py  request.py
qcware/optimization/: __init__.py  _hising.py  _hobo.py  _hoio.py  _ising.py  _pubo.py  _qubo.py  _solve_binary.py  find_optimal_qaoa_angles.py  solve_binary.py
qcware/qio/: BUILD  __init__.py  loader.py
qcware/qml/: __init__.py  fit_and_predict.py
qcware/serialization/: BUILD  serialize_quasar.py
qcware/test/: __init__.py  echo.py
qcware/types/: BUILD  __init__.py  ndarray.py  utils.py
qcware/util/: BUILD  serialize_quasar.py
script/: cibuild  test  update
tests/: conftest.py  faketest_qubo.py  test_conversions.py  test_convert_solutions.py  test_hobo.py  test_hoio.py  test_ising.py  test_qubo.py  test_qubo_ising_value.py
tests/optimization/: test_hising.py  test_hobo.py  test_hoio.py  test_pubo.py
tests/unit/: test_backend_exception.py  test_brute_force.py  test_circuits.py  test_config.py  test_distance_estimation.py  test_find_optimal_qaoa_angles.py  test_fit_and_also_predict.py  test_fit_and_predict.py  test_loader.py  test_monte_carlo.py  test_pauli.py  test_qaoa_expectation_value.py  test_qaoa_sample.py  test_qdot.py  test_serialize_binary_results.py  test_serialize_numpy.py  test_serialize_quasar.py  test_solve_binary.py  test_timeouts.py  test_transform_params.py
tests/utils/: test_subgraph.py
tests/vulcan/: test_brute_force.py  test_circuits.py  test_fit_and_predict.py  test_pauli.py  test_solve_binary.py
(+167 files in other folders)
