[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qcware"
version = "7.4.1"
description = "The python client for QC Ware's Forge SaaS quantum computing product"
authors = ["Vic Putz <vic.putz@qcware.com>","Bryan Burr <bryan.e.burr@qcware.com"]
packages = [
  {include = "qcware"}
]
repository = "http://github.com/qcware/platform_client_library_python"
documentation = "http://qcware.readthedocs.io/en/stable"
keywords = ["quantum","computing","cloud","API"]
readme="README.rst"
classifiers = [
	    "License :: OSI Approved :: Apache Software License",
	    "Programming Language :: Python :: 3",
	    "Operating System :: OS Independent",
	    ]


[tool.poetry.dependencies]
python = ">=3.7,<3.11"
aiohttp = ">= 3.7.4.post0"
backoff = ">= 1.10.0"
colorama = ">= 0.4.4"
icontract = ">= 2.5.3"
lz4 = ">= 3.1.3"
networkx = ">= 2.5.1"
numpy = "^1.21.5"
packaging = ">= 20.9"
pydantic = ">= 1.8.2"
python-decouple = ">= 3.4"
qcware-quasar = ">= 1.0.4"
qubovert = ">= 1.2.3"
requests = ">= 2.25.1"
tabulate = ">= 0.8.9"
setuptools = ">= 57.1.0"
toolz = ">=0.11.2"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
pytest = "^7.1.0"
